--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </svg>
                     </div>
                     <div class="pl-17">
-                        <h4 class="svg-text1">Location </h4>
+                        <p class="svg-text1">Location </p>
                         <p class="svg-text2">Search by city</p>
                     </div>
                     <div class="w-line ml-50 ml-lg-110 md-line absolute-md md-line-center"></div>
@@ -100,7 +100,7 @@
                         </svg>
                     </div>
                     <div class="pl-17">
-                        <h4 class="svg-text1">Date</h4>
+                        <p class="svg-text1">Date</p>
                         <p class="svg-text2">09/23/2021</p>
                     </div>
                     <div class="w-line ml-50 ml-lg-140 absolute-md md-line-h-center"></div>
@@ -131,7 +131,7 @@
 
                     </div>
                     <div class="pl-17">
-                        <h4 class="svg-text1">Capicity</h4>
+                        <p class="svg-text1">Capicity</p>
                         <p class="svg-text2">Search by city</p>
                     </div>
                     <div class="w-line ml-50 d-w-line"></div>
@@ -148,7 +148,7 @@
             <div class="row">
                 <div class="col6 relative col-lg-12 height">
                     <div class="absolute img-p">
-                        <img src="./assets/images/Microsoft Surface Hub.png" alt="" class="width">
+                        <img src="./assets/images/Microsoft Surface Hub.webp" alt="" class="width">
                         <div class="absolute p-svg">
                             <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 80 80"
                                 fill="none">
@@ -300,7 +300,7 @@
         </div>
     </section>
 
-    <section class="py-48">
+    <section class="py-48 overflow-hidden">
         <div class="container">
             <div class="row ml--12">
                 <div class="col6 col-lg-12">
@@ -321,7 +321,7 @@
                 <div class="col6 col-lg-12">
                     <div class="row">
                         <div class="card ">
-                            <img src="./assets/images/lorem.png" alt="card1" class="card-img  pd-1">
+                            <img src="./assets/images/lorem.webp" alt="card1" class="card-img  pd-1">
                             <p class="date  pd-1">09/23/2021</p>
                             <h2 class="card-head mn-1">Lorem ipsum</h2>
                             <p class="card-para  pd-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
@@ -330,7 +330,7 @@
                         </div>
                         <div class="relative">
                             <div class="card ">
-                                <img src="./assets/images/ipsum.png" alt="card2" class="card-img  pd-1">
+                                <img src="./assets/images/ipsum.webp" alt="card2" class="card-img  pd-1">
                                 <svg class="absolute arrow" xmlns="http://www.w3.org/2000/svg" width="56" height="24"
                                     viewBox="0 0 56 24" fill="none">
                                     <path
@@ -350,11 +350,11 @@
             </div>
     </section>
 
-    <section class="pb-48">
+    <section class="pb-48 overflow-hidden">
         <div class="container">
             <div class="row">
                 <div class="col6 col-lg-12 jc-center d-flex">
-                    <img src="./assets/images/Vector.png" alt="" class="sm-width">
+                    <img src="./assets/images/Vector.webp" alt="" class="sm-width">
                 </div>
                 <div class="col6 col-lg-12">
                     <div>
@@ -363,7 +363,7 @@
                             <rect width="166" height="8" fill="#2C49FE" />
                         </svg>
                     </div>
-                    <h1 class="S4-head1" id="join">Join Us!</h1>
+                    <h3 class="S4-head1" id="join">Join Us!</h3>
                     <p class="S4-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc efficitur urna in
                         dictum suscipit. Suspendisse maximus ipsum sem. Donec ut justo et leo congue </p>
                     <div>
@@ -393,7 +393,7 @@
     </section>
 
     <footer class="overflow-hidden">
-        <div class="bg-color ">
+        <div class="bg-color">
             <div class="container">
                 <div class="row py-48">
                     <div class="col4 col-md-12">
